--- a/package.json
+++ b/package.json
@@ -1,61 +1,41 @@
-{
+﻿{
   "name": "daigou-platform-pro",
   "version": "1.0.0",
-  "description": "代購平台 - 整合跑跑虎集運的電商系統",
+  "description": "Daigou Platform with SendGrid Integration",
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
-    "test": "jest",
-    "build": "npm run build:css && npm run build:js",
-    "build:css": "echo 'CSS build script'",
-    "build:js": "echo 'JS build script'",
-    "setup": "npm install && node scripts/setup.js",
-    "migrate": "node database/migrate.js",
-    "seed": "node database/seed.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "node-cron": "^3.0.3",
     "pg": "^8.11.3",
-    "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.2"
   },
-  "keywords": [
-    "ecommerce",
-    "daigou",
-    "shopping",
-    "platform",
-    "nodejs",
-    "express",
-    "sendgrid"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=6.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/daigou-platform-pro.git"
-  }
+    "url": "https://github.com/RD107924/daigo-pro2.git"
+  },
+  "keywords": [
+    "ecommerce",
+    "daigou",
+    "shopping"
+  ],
+  "author": "Randy Huang",
+  "license": "MIT"
 }
