--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ package-lock.json
 .env
 .env.local
 .env.production
-.env.backup
 
 # Logs
 *.log
@@ -29,3 +28,7 @@ build/
 # Uploads
 public/uploads/
 temp/
+
+# Backup files
+*.backup
+*-backup.*
