feat: 完整的代購平台功能
- 完整的前端頁面 (首頁、購物車、結帳、訂單追蹤)
- Node.js 後端服務
- SendGrid 郵件集成
- 管理後台系統
- 響應式蝦皮風格設計
- 集運倉庫集成 (跑跑虎)
- 付款證明上傳功能

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ﻿# Dependencies
 node_modules/
 package-lock.json
+npm-debug.log*
 
 # Environment files
 .env
@@ -9,7 +10,7 @@ package-lock.json
 
 # Logs
 *.log
-npm-debug.log*
+logs/
 
 # OS files
 .DS_Store
@@ -32,3 +33,11 @@ temp/
 # Backup files
 *.backup
 *-backup.*
+
+# Database files
+*.sqlite
+*.db
+
+# Sensitive config (保留 example 文件)
+config/settings.json
+!config/settings.example.json
