--- a/package.json
+++ b/package.json
@@ -1,41 +1,19 @@
 ﻿{
   "name": "daigou-platform-pro",
   "version": "1.0.0",
-  "description": "Daigou Platform with SendGrid Integration",
-  "main": "backend/server.js",
+  "description": "Professional Daigou Platform",
+  "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "pg": "^8.11.3",
-    "uuid": "^9.0.1"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/RD107924/daigo-pro2.git"
-  },
-  "keywords": [
-    "ecommerce",
-    "daigou",
-    "shopping"
-  ],
-  "author": "Randy Huang",
-  "license": "MIT"
+  }
 }
